--- a/src/global.scss
+++ b/src/global.scss
@@ -37,7 +37,7 @@
 
 @font-face {
   font-family: Main;
-  src: url(/assets/font/RobotoMono.ttf);
+  src: url(/assets/font/SourceSansPro.ttf);
 }
 
 * {
